--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,46 +12,38 @@
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
-        <TextView
-            android:id="@+id/lbl_decimal_num"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Insert a decimal number:"
-            tools:layout_editor_absoluteX="98dp"
-            tools:layout_editor_absoluteY="177dp" />
 
-        <EditText
-            android:id="@+id/txt_decimal_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="numberDecimal"
-            tools:layout_editor_absoluteX="98dp"
-            tools:layout_editor_absoluteY="227dp" />
 
-        <TextView
-            android:id="@+id/lbl_binary_num"
+        <ImageView
+            android:id="@+id/img_logo_app_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Binary number:"
-            tools:layout_editor_absoluteX="106dp"
-            tools:layout_editor_absoluteY="328dp" />
+            android:layout_height="100dp"
+            android:background="#ffffff"
+            android:backgroundTint="#ffffff"
+            app:srcCompat="@drawable/eafit_logo"
+            android:contentDescription="@string/eafit_university_logo"/>
+
+        <ImageView
+            android:id="@+id/img_logo_numerical_app_main"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_margin="0dp"
+            android:contentDescription="@string/numerical_analysis_app_logo"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/numerical_logo" />
 
         <TextView
-            android:id="@+id/txt_binary_num"
+            android:id="@+id/lbl_main_help"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=""
-            tools:layout_editor_absoluteX="106dp"
-            tools:layout_editor_absoluteY="387dp" />
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:text="@string/welcome_to_numerical_analysis"
+            android:textAlignment="center"
+            android:textColor="#494C4D"
+            android:textSize="18sp"
+            tools:ignore="LabelFor" />
 
-        <Button
-            android:id="@+id/btn_convert"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Convert"
-            tools:layout_editor_absoluteX="106dp"
-            tools:layout_editor_absoluteY="441dp" />
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
