--- a/app/src/main/res/layout/machine_definition.xml
+++ b/app/src/main/res/layout/machine_definition.xml
@@ -97,6 +97,7 @@
         android:layout_margin="2dp"
         android:text=""
         android:textColor="#F44336"
+        android:textSize="18sp"
         tools:ignore="LabelFor" />
 
 </LinearLayout>
