--- a/app/src/main/res/layout/machine_numbers.xml
+++ b/app/src/main/res/layout/machine_numbers.xml
@@ -66,6 +66,7 @@
         android:text=""
         android:textColor="#4CAF50"
         android:textSize="18sp"
+        android:textStyle="bold"
         tools:ignore="LabelFor" />
 
 </LinearLayout>
